# SimplifiedDM-SSSFDM-Toolbox

./: Dockerfile  Dockerfile_bak  GIT_MANAGEMENT  Makefile  Makefile.in  Makefile.patch  Makefile_fixed_pahts  README  README.md  README.patch  README_CREATES_NEW_MODEL.md  README_deploy_mybinder.md  README_mybinder  aclocal.m4  butler  butler.in  butler.patch  clean.sh  clean_repo.sh  compile_spheno_directly.sh  config.status  configure  configure.ac  gitconfig.sh  index.ipynb  index_bash.ipynb  micromegas_prtcl_fix.sh  requirements.txt  test_toolbox.py  update-dirs.sh
SARAH/: SARAH.config  SARAH.m  SARAH.nb
SARAH/Models/: blocks.fermions.lha  blocks.m  blocks.scalars.lha  darkLR  parameters.m  tripletLR
SARAH/Package/: dependences.m  init.m  mathParticleProp.m  mathSumMatrizes.m  processes.m  variables.m  vertex.m
SPHENO/: Makefile
SPHENO/DMLR/: BranchingRatios_DMLR.f90  CouplingsForDecays_DMLR.f90  Couplings_DMLR.f90  Fd.f90  Fe.f90  FlavorKit_LFV_DMLR.f90  FlavorKit_Observables_DMLR.f90  FlavorKit_QFV_DMLR.f90  Fu.f90  Fv.f90  HiggsCS_DMLR.f90  InputOutput_DMLR.f90  LesHouches.in.DMLR  LesHouches.in.DMLR_low  LoopCouplings_DMLR.f90  LoopMasses_DMLR.f90  LowEnergy_DMLR.f90  Makefile  Model_Data_DMLR.f90  RGEs_DMLR.f90  RunSM_DMLR.f90  SPhenoDMLR.f90  SSP_Template.m.DMLR  SSP_Template_lowScaleInput.m.DMLR  SusyDecays_DMLR.f90  SusyMasses_DMLR.f90  TadpoleEquations_DMLR.f90
SPHENO/LRDM/: BranchingRatios_LRDM.f90  CouplingsForDecays_LRDM.f90  Couplings_LRDM.f90  Fd.f90  Fe.f90  FlavorKit_LFV_LRDM.f90  FlavorKit_Observables_LRDM.f90  FlavorKit_QFV_LRDM.f90  Fu.f90  Fv.f90  HiggsCS_LRDM.f90  InputOutput_LRDM.f90  LesHouches.in.LRDM  LesHouches.in.LRDM_low  LoopCouplings_LRDM.f90  LoopMasses_LRDM.f90  LowEnergy_LRDM.f90  Makefile  Model_Data_LRDM.f90  RGEs_LRDM.f90  RunSM_LRDM.f90  SPhenoLRDM.f90  SSP_Template.m.LRDM  SSP_Template_lowScaleInput.m.LRDM  SusyDecays_LRDM.f90  SusyMasses_LRDM.f90  TadpoleEquations_LRDM.f90
SPHENO/SM/: BranchingRatios_SM.f90  CouplingsForDecays_SM.f90  Couplings_SM.f90  Fd.f90  Fe.f90  FlavorKit_LFV_SM.f90  FlavorKit_Observables_SM.f90  FlavorKit_QFV_SM.f90  Fu.f90  HiggsCS_SM.f90  InputOutput_SM.f90  LesHouches.in.SM  LesHouches.in.SM_low  LoopCouplings_SM.f90  LoopMasses_SM.f90  LowEnergy_SM.f90  Makefile  Model_Data_SM.f90  RGEs_SM.f90  RunSM_SM.f90  SPhenoSM.f90  SSP_Template.m.SM  SSP_Template_lowScaleInput.m.SM  SugraRuns_SM.f90  SusyDecays_SM.f90  SusyMasses_SM.f90  TadpoleEquations_SM.f90
SPHENO/SMHighScale/: BranchingRatios_SMHighScale.f90  CouplingsForDecays_SMHighScale.f90  Couplings_SMHighScale.f90  Fd.f90  Fe.f90  FlavorKit_LFV_SMHighScale.f90  FlavorKit_Observables_SMHighScale.f90  FlavorKit_QFV_SMHighScale.f90  Fu.f90  HiggsCS_SMHighScale.f90  InputOutput_SMHighScale.f90  LesHouches.in.SMHighScale  LesHouches.in.SMHighScale_low  LoopCouplings_SMHighScale.f90  LoopMasses_SMHighScale.f90  LowEnergy_SMHighScale.f90  Makefile  Model_Data_SMHighScale.f90  RGEs_SMHighScale.f90  RunSM_SMHighScale.f90  SPhenoSMHighScale.f90  SSP_Template.m.SMHighScale  SSP_Template_lowScaleInput.m.SMHighScale  SugraRuns_SMHighScale.f90  SusyDecays_SMHighScale.f90  SusyMasses_SMHighScale.f90  TadpoleEquations_SMHighScale.f90
SPHENO/SSDM/: BranchingRatios_SSDM.f90  CouplingsForDecays_SSDM.f90  Couplings_SSDM.f90  Fd.f90  Fe.f90  FlavorKit_LFV_SSDM.f90  FlavorKit_Observables_SSDM.f90  FlavorKit_QFV_SSDM.f90  Fu.f90  HiggsCS_SSDM.f90  InputOutput_SSDM.f90  LesHouches.in.SSDM  LesHouches.in.SSDM_low  LoopCouplings_SSDM.f90  LoopMasses_SSDM.f90  LowEnergy_SSDM.f90  Makefile  Model_Data_SSDM.f90  RGEs_SSDM.f90  RunSM_SSDM.f90  SPhenoSSDM.f90  SSP_Template.m.SSDM  SSP_Template_lowScaleInput.m.SSDM  SusyDecays_SSDM.f90  SusyMasses_SSDM.f90  TadpoleEquations_SSDM.f90
SPHENO/Scotogenic/: BranchingRatios_Scotogenic.f90  CouplingsForDecays_Scotogenic.f90  Couplings_Scotogenic.f90  Fd.f90  Fe.f90  FlavorKit_LFV_Scotogenic.f90  FlavorKit_Observables_Scotogenic.f90  FlavorKit_QFV_Scotogenic.f90  Fu.f90  HiggsCS_Scotogenic.f90  InputOutput_Scotogenic.f90  LesHouches.in.Scotogenic  Makefile  (+14 more)
SSP/: DefaultSettings.m  Example.nb  MakeScan.sh  Readme.txt  SSP.m
autom4te.cache/: output.0  requests  traces.0
calchep/: Makefile  calchep  calchep_batch  getFlags  mkWORKdir
m4/: fortran.m4  mathematica.m4  misc.m4  packages.m4
madgraph/: README  UpdateNotes.txt  makefile  py.py  pythia-pgs.tgz
madgraph/pythia-pgs/libraries/lhapdf/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
madgraph/pythia-pgs/libraries/lhapdf/PDFsets/: Alekhin_100.LHpdf  Alekhin_1000.LHpdf  Botje_100.LHpdf  Botje_1000.LHpdf  Fermi2002_100.LHpdf  Fermi2002_1000.LHpdf  MRST2001E.LHpdf  MRST2001nlo.LHpdf  MRST2002nlo.LHgrid  MRST2002nlo.LHpdf  MRST2002nnlo.LHgrid  MRST2003cnlo.LHpdf  MRST2004nlo.LHpdf  MRST98.LHpdf  ZEUS2002_FF.LHpdf  ZEUS2002_TR.LHpdf  ZEUS2002_ZM.LHpdf  ZEUS2005_ZJ.LHpdf  cteq4d.LHgrid  cteq4l.LHgrid  cteq4m.LHgrid  cteq5d.LHgrid  cteq5l.LHgrid  cteq5m.LHgrid  cteq5m1.LHgrid  cteq6.LHpdf  cteq61.LHpdf  cteq6l.LHpdf  cteq6ll.LHpdf  cteq6m.LHpdf
madgraph/pythia-pgs/libraries/lhapdf/config/: config.h  config.h.in
madgraph/pythia-pgs/libraries/lhapdf/examples/: Example1.f  Example2.f  Example3.f  Example4.f  Makefile  Makefile.am  Makefile.in
madgraph/pythia-pgs/libraries/lhapdf/src/: EVLCTEQ.f  LHpdflib.f  Makefile.am  Makefile.in  QCDNUM.f  QCDparams.f  Sqcdnum.f  alphas.f  description.f  evolution.f  inputPDF.f  lhaglue.f  lhapdf-config.in  parameter.f  parmsetup.f  wrapEVLCTEQ.f  wrapQCDNUM.f  wrapa02.f  wrapa02m.f  wrapabfkwpi.f  wrapacfgpg.f  wrapcteq5.f  wrapcteq6.f  wrapdgg.f  wrapdog.f  wrapevolve.f  wrapgrv.f  wrapgrvg.f  wrapgrvpi.f  wrapgsg.f  wrapgsg96.f  wraph1.f  wraplacg.f  wrapmrst.f  wrapmrst98.f  wrapowpi.f  wrapsasg.f  wrapsmrspi.f  wrapwhitg.f  wrapzeus.f
tarballs/: calchep_3.4.6.tgz
tests/: Run.ipynb  Scotogenic.ipynb  SimplifiedDM-DFDM.ipynb  SimplifiedDM-IDM.ipynb  SimplifiedDM-SDFDM.ipynb  SimplifiedDM-SSSFDM.ipynb  cmdlike.py  hep.py  pdg.py  pdg_series.py  test_toolbox.py  tripletLR.ipynb
(+1370 files in other folders)
