noinst_PROGRAMS = lhapdf-example1 lhapdf-example2 lhapdf-example3 lhapdf-example4

lhapdf_example1_SOURCES = Example1.f
lhapdf_example2_SOURCES = Example2.f
lhapdf_example3_SOURCES = Example3.f
lhapdf_example4_SOURCES = Example4.f

lhapdf_example1_LDADD = $(top_builddir)/src/libLHAPDFlocal.a
lhapdf_example2_LDADD = $(top_builddir)/src/libLHAPDFlocal.a
lhapdf_example3_LDADD = $(top_builddir)/src/libLHAPDFlocal.a
lhapdf_example4_LDADD = $(top_builddir)/src/libLHAPDFlocal.a
